--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "resetti",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A bare-bones CSS reset for modern web development",
-  "main": "./resetti.min.css",
+  "main": "resetti.min.css",
   "scripts": {
     "build": "uglifycss resetti.css > resetti.min.css",
     "release": "yarn build && yarn publish"
   },
   "author": "Chase McCoy <chasem000@gmail.com>",
-  "files": [
-    "dist",
-    "resetti.cs"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chasemccoy/resetti.git"
