--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resetti",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A bare-bones CSS reset for modern web development",
   "main": "resetti.min.css",
   "scripts": {
@@ -8,6 +8,10 @@
     "release": "yarn build && yarn publish"
   },
   "author": "Chase McCoy <chasem000@gmail.com>",
+  "files": [
+    "resetti.css",
+    "resetti.min.css"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chasemccoy/resetti.git"
