--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Resetti is a tiny, modern CSS reset with great defaults",
   "main": "resetti.min.css",
   "scripts": {
-    "build": "uglifycss resetti.css | postcss --use autoprefixer --no-map > resetti.min.css",
+    "build": "uglifycss resetti.css | postcss --no-map > resetti.min.css",
     "release": "yarn build && yarn publish"
   },
   "author": "Chase McCoy <chasem000@gmail.com>",
